feat : Improve overdue system and integrate Supabase database
- Refactored overdue detection logic for consistency and accuracy.
- Updated `AdminController` and `UserController` to handle the new "Overdue" status.
- Enhanced `BorrowingTransaction` model with a robust `IsOverdue` property.
- Added sample data creation in `Program.cs` for testing overdue scenarios.
- Integrated Supabase as the database provider, replacing PostgreSQL.
- Updated `README.md` with Supabase setup instructions and troubleshooting.
- Improved `BorrowHistory.cshtml` to display and count overdue transactions.
- Replaced hardcoded credentials in `appsettings.json` with placeholders.

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "User Id=postgres.qkvunnpyqokkvxhmfwiu;Password=14081998Hoka;Server=aws-1-ap-southeast-1.pooler.supabase.com;Port=5432;Database=postgres"
+    "DefaultConnection": "User Id=postgres.qkvunnpyqokkvxhmfwiu;Password=[YOUR-PASSWORD];Server=aws-1-ap-southeast-1.pooler.supabase.com;Port=5432;Database=postgres"
   },
   "Logging": {
     "LogLevel": {
